Mon Sep 22 11:57:42 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	* examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.cpp: 

	  Declared the environment variable in send_poll method as unused
	  as it was not used in the method. This should remove the warning
	  on Redhat Explicit Template build.
	
Fri Sep 19 07:49:19 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/RTScheduling/Current/Makefile (SRC):

	  Corrected this Make variable.  It previously listed non-existent
	  files, which caused the dependency generation step to fail.
	  This should alleviate some bogus test failures showing up in
	  some automated builds.

	  (LIBS, TEST_LIBS):

	  Replaced LIBS variable with TEST_LIBS, where the latter only
	  contains the TAO_RTScheduler library.  There is no need to
	  explicitly list the core ACE/TAO/RTCORBA libraries since they
	  already exist in the RT_TAO_CLNT_LIBS variable used during the
	  link step.

Fri Sep 19 07:30:52 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/PortableServer/ImplRepoC.h:

          Explicitly #undef IOR in this file to work around an HPUX
          namespace conflict.

	* orbsvcs/tests/IOR_MCast/server_i.h (enable_multicast):
	* orbsvcs/tests/IOR_MCast/server_i.cpp (enable_multicast):

	  Removed CORBA::Environment parameter and accompanying
	  ACE_TRY/CATCH blocks.  They were not used.  Fixes an unused
	  "ACE_TRY_LABEL" warning in non-inline builds.

	* orbsvcs/tests/IOR_MCast/Makefile:

	  Updated dependencies.  They were missing altogether

Thu Sep 18 14:11:53 MST 2003 Trevor Fields <fields_t@ociweb.com>

        * TAO/performance-tests/Cubit/TAO/DII_Cubit/DII_Cubit.mpc:

          Corrected the name of the IDL_Cubit project to build after

        * TAO/examples/Quoter/Quoter.mpc:
        * TAO/examples/TypeCode_Creation/TypeCode_Creation.mpc:
        * TAO/orbsvcs/IFR_Service/IFR_Service.mpc:
        * TAO/orbsvcs/LifeCycle_Service/LifeCycle_Service.mpc: